// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalContinueButton /> render() should render the Continue button as loading 1`] = `
<button
  aria-disabled="true"
  class="wrapper fill primary medium isDisabled"
  type="button"
>
  <svg
    class="_spinner_93fxp_136 _gloom_93fxp_162 spinner"
    height="22"
    preserveAspectRatio="xMidYMid meet"
    role="status"
    viewBox="0 0 20 20"
    width="22"
  >
    <circle
      class="_dot_93fxp_168"
      cx="10"
      cy="10"
      fill="none"
      r="6"
      stroke-width="2"
    />
    <circle
      class="_circle_93fxp_174"
      cx="10"
      cy="10"
      fill="none"
      r="6"
      stroke-width="2"
    />
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </svg>
  <span
    class="content"
  >
    Continue
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button as loading 2`] = `
<button
  aria-disabled="true"
  class="wrapper fill primary medium isDisabled"
  type="button"
>
  <svg
    class="_spinner_93fxp_136 _gloom_93fxp_162 spinner"
    height="22"
    preserveAspectRatio="xMidYMid meet"
    role="status"
    viewBox="0 0 20 20"
    width="22"
  >
    <circle
      class="_dot_93fxp_168"
      cx="10"
      cy="10"
      fill="none"
      r="6"
      stroke-width="2"
    />
    <circle
      class="_circle_93fxp_174"
      cx="10"
      cy="10"
      fill="none"
      r="6"
      stroke-width="2"
    />
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </svg>
  <span
    class="content"
  >
    Continue
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button as loading 3`] = `
<button
  aria-disabled="true"
  class="wrapper fill primary medium isDisabled"
  type="button"
>
  <svg
    class="_spinner_93fxp_136 _gloom_93fxp_162 spinner"
    height="22"
    preserveAspectRatio="xMidYMid meet"
    role="status"
    viewBox="0 0 20 20"
    width="22"
  >
    <circle
      class="_dot_93fxp_168"
      cx="10"
      cy="10"
      fill="none"
      r="6"
      stroke-width="2"
    />
    <circle
      class="_circle_93fxp_174"
      cx="10"
      cy="10"
      fill="none"
      r="6"
      stroke-width="2"
    />
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </svg>
  <span
    class="content"
  >
    I Have Saved My Codes
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button disabled because of error 1`] = `
<button
  aria-disabled="true"
  class="wrapper fill primary medium isDisabled"
  type="button"
>
  <span
    class="content"
  >
    Continue
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button disabled because of error 2`] = `
<button
  aria-disabled="true"
  class="wrapper fill primary medium isDisabled"
  type="button"
>
  <span
    class="content"
  >
    Continue
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the Continue button disabled because of error 3`] = `
<button
  aria-disabled="true"
  class="wrapper fill primary medium isDisabled"
  type="button"
>
  <span
    class="content"
  >
    I Have Saved My Codes
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the appropriate Continue button based on current step 1`] = `
<button
  aria-disabled="false"
  class="wrapper fill primary medium"
  type="button"
>
  <span
    class="content"
  >
    Continue
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the appropriate Continue button based on current step 2`] = `
<button
  aria-disabled="false"
  class="wrapper fill primary medium"
  type="button"
>
  <span
    class="content"
  >
    Continue
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the appropriate Continue button based on current step 3`] = `
<button
  aria-disabled="false"
  class="wrapper fill primary medium"
  type="button"
>
  <span
    class="content"
  >
    I Have Saved My Codes
  </span>
</button>
`;

exports[`<ModalContinueButton /> render() should render the appropriate Continue button based on current step 4`] = `null`;
